# RuNet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  descriptor_wrapper_test.cpp  idx_file_test.cpp  mnist.cpp  network_test.cpp  runet.cpp  runet_img_conv_test.cpp  softmax_output_test.cpp  test_main.cpp
cmake/: googletest.cmake  png++.cmake
include/: convolution.h  gpu_operations.cuh  layer.h  tensor.h  utils.h
include/cuda/: cuda_memory.h  cudnn_descriptor.h
include/layer/: activation.h  convolution.h  layer.h  linear.h  output.cuh  pooling.h  softmax.cuh
include/runet/cuda/: cuda_memory.cuh  cuda_memory.h  cudnn_descriptor.h
include/runet/global/: global.h
include/runet/layer/: activation.h  convolution.h  layer.h  linear.h  output.cuh  pooling.h  softmax.cuh
include/runet/network/: network.h
include/runet/tensor/: tensor.h
include/runet/utils/: check.h  constants.h  gpu_operations.cuh  utils.h
include/tensor/: tensor.h
include/utils/: check.h  constants.h  gpu_operations.cuh  utils.h
src/: runet.cpp  runet_img_conv_test.cpp  utils.cpp
src/cuda/: cuda_memory.cpp  cuda_memory.cu  cudnn_descriptor.cpp
src/global/: global.cpp  global.h
src/layer/: activation.cpp  activation.h  convolution.cpp  convolution.h  layer.cpp  layer.h  linear.cpp  output.cu  pooling.cpp  softmax.cu
src/network/: network.cpp
src/tensor/: tensor.cpp  tensor.h
src/utils/: constants.h  gpu_operations.cpp  gpu_operations.cu  gpu_operations.cuh  utils.cpp  utils.h
test/: test_convolution.cpp
